--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -15,22 +15,22 @@
     <link rel="stylesheet" type="text/css" href="css/slider.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="pater/pater.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <style>
-        body {
-            background-image: url("logos/bg3.jpg");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-        .text-center {
-            margin-top:30px;
-        }
-        img {
-            height: 200px;
-            width:300px;
-        }
+    body {
+        background-image: url("logos/bg3.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .text-center {
+        margin-top:30px;
+    }
+    img {
+        height: 200px;
+        width:300px;
+    }
     </style>
 </head>
 
@@ -42,10 +42,10 @@
                 <a class="navbar-brand" href="#">LOGO</a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
@@ -194,8 +194,9 @@
                         <!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
                     </div>
                     <div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
-                        <h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i> MNNIT Allahabad, India </h5>
-                        <h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+                        <h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
+                        <h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+                        <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
                         <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
                         <h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
                         <br>
@@ -229,29 +230,29 @@
                                 <li><a class="footer_links">Dark Room</a></li>
                                 <li><a class="footer_links">Anunaad</a></li> -->
 
-                        </ul>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--For copyright-->
-        <div class="row">
-            <hr width="80%">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10 footer-company-name">
-                <center>Copyright © Culrav 2018. All rights reserved</center>
+            <!--For copyright-->
+            <div class="row">
+                <hr width="80%">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10 footer-company-name">
+                    <center>Copyright © Culrav 2018. All rights reserved</center>
+                </div>
+                <div class="col-sm-1"></div>
             </div>
-            <div class="col-sm-1"></div>
-        </div>
-    </footer>
+        </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 
-    <script src="js/prefixfree.min.js"></script>
-</body>
+        <script src="js/prefixfree.min.js"></script>
+    </body>
 
-<!-- Mirrored from culrav.in/sponsors/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Jul 2016 00:26:16 GMT -->
+    <!-- Mirrored from culrav.in/sponsors/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Jul 2016 00:26:16 GMT -->
 
-</html>
+    </html>
