--- a/subevents/literary/index.html
+++ b/subevents/literary/index.html
@@ -64,58 +64,58 @@
 			<!-- facts expander with toggles; content for each is in its section -->
 			<div class="facts">
 
+			</div>
+			<!-- index -->
+			<div class="sections__index">
+				<span class="sections__index-current">
+					<span class="sections__index-inner">01</span>
+				</span>
+				<span class="sections__index-total">02</span>
+			</div>
+			<!-- navigation down -->
+			<nav class="sections__nav">
+				<button class="sections__nav-item sections__nav-item--prev fa fa-arrow-left">
+					<!-- <svg class="icon icon--navup"><use xlink:href="#icon-navup"></use></svg> -->
+				</button>
+				<button class="sections__nav-item sections__nav-item--next fa fa-arrow-right">
+					<!-- <svg class="icon icon--navdown"><use xlink:href="#icon-navdown"></use></svg> -->
+				</button>
+			</nav>
+			<!-- sections -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<section class="section section--current">
+				<div class="section__content">
+					<h1 class="section__title">Hindi&nbsp;&nbsp;Debate</h1>
+					<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
+					<!--<p class="section__description"><span class="section__slogan"><i>"Let the music speak"</i></span><span class="section__description-inner">If you believe that you have got your surs right and if you feel that you have got a voice that can drive people crazy and mesmerize them, this is one thing you should surely go 	for. This event is a search for those who have mastered melody as well as versatility.</span></p>-->
 				</div>
-				<!-- index -->
-				<div class="sections__index">
-					<span class="sections__index-current">
-						<span class="sections__index-inner">01</span>
-					</span>
-					<span class="sections__index-total">02</span>
+				<div class="section__img">
+					<div class="section__img-inner" style="background-image: url(img/debate.jpg);background-size:contain;background-repeat:no-repeat"></div>
 				</div>
-				<!-- navigation down -->
-				<nav class="sections__nav">
-					<button class="sections__nav-item sections__nav-item--prev fa fa-arrow-left">
-						<!-- <svg class="icon icon--navup"><use xlink:href="#icon-navup"></use></svg> -->
-					</button>
-					<button class="sections__nav-item sections__nav-item--next fa fa-arrow-right">
-						<!-- <svg class="icon icon--navdown"><use xlink:href="#icon-navdown"></use></svg> -->
-					</button>
-				</nav>
-				<!-- sections -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-				<section class="section section--current">
-					<div class="section__content">
-						<h1 class="section__title">Hindi&nbsp;&nbsp;Debate</h1>
-						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-						<!--<p class="section__description"><span class="section__slogan"><i>"Let the music speak"</i></span><span class="section__description-inner">If you believe that you have got your surs right and if you feel that you have got a voice that can drive people crazy and mesmerize them, this is one thing you should surely go 	for. This event is a search for those who have mastered melody as well as versatility.</span></p>-->
+				<div class="section__more">
+					<div class="section__more-inner section__more-inner--bg1">
+						<span class="section__more-text">Want to know more?</span>
+						<a target="_blank" class="section__more-link">
+							<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
+							<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+						</a>
 					</div>
-					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/debate.jpg);background-size:contain;background-repeat:no-repeat"></div>
-					</div>
-					<div class="section__more">
-						<div class="section__more-inner section__more-inner--bg1">
-							<span class="section__more-text">Want to know more?</span>
-							<a target="_blank" class="section__more-link">
-								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
-						</div>
-					</div>
-					<div class="section__expander"></div>
-					<ul class="section__facts">
+				</div>
+				<div class="section__expander"></div>
+				<ul class="section__facts">
 						<!-- <li class="section__facts-item">
 							<h4 class="section__facts-title">Co-ordinators</h4>
 							
@@ -200,7 +200,8 @@
 							</div>
 							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
 								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
 								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
 								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
 								<br>
