--- a/subevents/litmuse/index.html
+++ b/subevents/litmuse/index.html
@@ -452,35 +452,35 @@
 
 
 
-			<section class="section">
-				<div class="section__content">
-					<h1 class="section__title">Story Writing</h1>
-					<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-					<!--<p class="section__description"><span class="section__slogan"><i>"La création originale"</i></span><span class="section__description-inner">Soak in the music. Let the notes take control over your mind and body. 	Witness the euphoria. Witness Rachna.</span></p>-->
-				</div>
-				<div class="section__img">
-					<div class="section__img-inner" style="background-image: url(img/story_writing_fit.jpg);background-size:contain;background-repeat:no-repeat"></div>
-				</div>
-				<div class="section__more">
-					<div class="section__more-inner section__more-inner--bg1">
-						<span class="section__more-text">Want to know more?</span>
-						<center><a target="_blank" class="section__more-link">
+				<section class="section">
+					<div class="section__content">
+						<h1 class="section__title">Story Writing</h1>
+						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
+						<!--<p class="section__description"><span class="section__slogan"><i>"La création originale"</i></span><span class="section__description-inner">Soak in the music. Let the notes take control over your mind and body. 	Witness the euphoria. Witness Rachna.</span></p>-->
+					</div>
+					<div class="section__img">
+						<div class="section__img-inner" style="background-image: url(img/story_writing_fit.jpg);background-size:contain;background-repeat:no-repeat"></div>
+					</div>
+					<div class="section__more">
+						<div class="section__more-inner section__more-inner--bg1">
+							<span class="section__more-text">Want to know more?</span>
+							<center><a target="_blank" class="section__more-link">
 								<center><span class="section__more-linktext"><b>team.culrav@culrav.in</b></span></center>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a></center>
+						</div>
 					</div>
-				</div>
-				<div class="section__expander"></div>
-				<ul class="section__facts">
+					<div class="section__expander"></div>
+					<ul class="section__facts">
 					<!-- <li class="section__facts-item">
                         <h4 class="section__facts-title">Co-ordinators</h4>
 
                     </li> -->
 
-					<li class="section__facts-item">
-						<h3 class="section__facts-title">Yash Narendra</h3>
-						<span class="section__facts-detail">9897635123</span>
-					</li>
+                    <li class="section__facts-item">
+                    	<h3 class="section__facts-title">Yash Narendra</h3>
+                    	<span class="section__facts-detail">9897635123</span>
+                    </li>
 					<!-- <li class="section__facts-item section__facts-item--clickable" data-gallery="gallery1">
                         <div class="section__facts-img">
                             <img src="img/thumb1.jpg" alt="Some image"/>
@@ -489,7 +489,7 @@
                         <h3 class="section__facts-title">More impressions</h3>
                         <span class="section__facts-detail">A collection of images</span>
                     </li> -->
-				</ul>
+                </ul>
 				<!-- <div class="section__gallery" id="gallery1">
                     <h3 class="section__gallery-item section__gallery-item--title">More impressions</h3>
                     <a class="section__gallery-item" href="#"><img src="img/thumb1.jpg" alt="Some image"/></a>
@@ -499,7 +499,7 @@
                     <a class="section__gallery-item" href="#"><img src="img/thumb5.jpg" alt="Some image"/></a>
                     <a class="section__gallery-item" href="#"><img src="img/thumb6.jpg" alt="Some image"/></a>
                 </div> -->
-			</section><!--/ section -->
+            </section><!--/ section -->
 
 
 
@@ -508,55 +508,56 @@
 
 
 
-			</div><!--/ sections -->
+        </div><!--/ sections -->
 
 
 
 
 
-			<footer>
+        <footer>
 
-				<!--For links-->
-				<div class="row">
-					<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
-						<div class="row">
-							<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
-								<h2>&nbsp;&nbsp;Culrav</h2>
-								<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class="fa  fa-fw fa-facebook"></i></a></button>
-								<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
-							</div>
-							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
-								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
-								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
-								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
-								<br>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-12 col-md-6" id="links">
-						<div class="row">
-							<div class="col-xs-12 col-sm-12" align="center" id="title">
-								<strong>Other</strong>
-							</div>
-						</div>
-						<div class="row last_row">
-							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
-								<ul style="list-style: none;">
-									<li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
-									<li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
-									<li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
-									<li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
-								</ul>
-							</div>
-							<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
-								<ul style="list-style: none;">
-									<!--<li><strong>Navigate</strong></li>-->
-									<!--<li><a class="footer_links">Home</a></li>-->
-									<!--<li><a class="footer_links">About</a></li>-->
-									<!--<li><a class="footer_links">FAQs</a></li>-->
-									<!--<li><a class="footer_links">Register</a></li>-->
-									<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
+        	<!--For links-->
+        	<div class="row">
+        		<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+        			<div class="row">
+        				<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+        					<h2>&nbsp;&nbsp;Culrav</h2>
+        					<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class="fa  fa-fw fa-facebook"></i></a></button>
+        					<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
+        				</div>
+        				<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+        					<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
+        					<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+        					<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
+        					<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
+        					<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
+        					<br>
+        				</div>
+        			</div>
+        		</div>
+        		<div class="col-xs-12 col-sm-12 col-md-6" id="links">
+        			<div class="row">
+        				<div class="col-xs-12 col-sm-12" align="center" id="title">
+        					<strong>Other</strong>
+        				</div>
+        			</div>
+        			<div class="row last_row">
+        				<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+        					<ul style="list-style: none;">
+        						<li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
+        						<li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
+        						<li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+        						<li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+        					</ul>
+        				</div>
+        				<div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+        					<ul style="list-style: none;">
+        						<!--<li><strong>Navigate</strong></li>-->
+        						<!--<li><a class="footer_links">Home</a></li>-->
+        						<!--<li><a class="footer_links">About</a></li>-->
+        						<!--<li><a class="footer_links">FAQs</a></li>-->
+        						<!--<li><a class="footer_links">Register</a></li>-->
+        						<li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
 									<!-- <li><a class="footer_links">Razmatazz</a></li>
 									<li><a class="footer_links">Dark Room</a></li>
 									<li><a class="footer_links">Anunaad</a></li> -->
