--- a/subevents/rangmanch/index.html
+++ b/subevents/rangmanch/index.html
@@ -106,9 +106,9 @@
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
 								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
+									<span class="section__more-linktext"><b>CLICK HERE</b></span>
+									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+								</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -171,9 +171,9 @@
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
 								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
+									<span class="section__more-linktext"><b>CLICK HERE</b></span>
+									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+								</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -188,8 +188,8 @@
 							<span class="section__facts-detail">9161404848</span>
 						</li>
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Prateek Sahu</h3>
-							<span class="section__facts-detail">7408124141</span>
+							<h3 class="section__facts-title">Tanisha Gupta</h3>
+							<span class="section__facts-detail"></span>
 						</li>
 
 						<!-- <li class="section__facts-item section__facts-item--clickable" data-gallery="gallery1">
@@ -238,9 +238,9 @@
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
 								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
+									<span class="section__more-linktext"><b>CLICK HERE</b></span>
+									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+								</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -251,7 +251,7 @@
 						</li> -->
 						
 						<li class="section__facts-item">
-							<h3 class="section__facts-title">Anushka Srivastava</h3>
+							<h3 class="section__facts-title">Shalu Sapnani</h3>
 							<span class="section__facts-detail"></span>
 						</li>
 						<li class="section__facts-item">
@@ -302,9 +302,9 @@
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
 								<a href="rangmanch.pdf"  target="_blank" class="section__more-link">
-								<span class="section__more-linktext"><b>CLICK HERE</b></span>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
+									<span class="section__more-linktext"><b>CLICK HERE</b></span>
+									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+								</a>
 							</div>
 						</div>
 						<div class="section__expander"></div>
@@ -372,7 +372,7 @@
 
 
 
-	<footer>
+			<footer>
 
 				<!--For links-->
 				<div class="row">
@@ -385,7 +385,8 @@
 							</div>
 							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
 								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
 								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
 								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
 								<br>
@@ -446,7 +447,7 @@
 
 
 		</main>
-	
+
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/charming.min.js"></script>
 		<script src="js/anime.min.js"></script>
