--- a/team/index.html
+++ b/team/index.html
@@ -311,7 +311,8 @@
 					</div>
 					<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
 						<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-						<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+						<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+						<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
 						<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
 						<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
 						<br>
