--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -118,7 +118,7 @@
 						
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Asad</h3>
-							<span class="section__facts-detail"></span>
+							<span class="section__facts-detail">9598523148</span>
 						</li>
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Sushma Sharma</h3>
@@ -430,7 +430,8 @@
 							</div>
 							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
 								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
 								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
 								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
 								<br>
