--- a/subevents/razmatazz/index.html
+++ b/subevents/razmatazz/index.html
@@ -29,33 +29,33 @@
 			</header>
 
 			<!-- menu -->
-				<nav class="menu">
-					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="../../index.html">Home</a></li>
+			<nav class="menu">
+				<ul class="menu__inner">
+					<li class="menu__item"><a class="menu__item-link" href="../../index.html">Home</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../events">Events</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../schedule">Schedule</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../sponsors">Sponsors</a></li>
 					<li class="menu__item"><a class="menu__item-link" href="../../team">Team</a></li>
-					</ul>
-					<div class="menu__toggle">
-						<span class="menu__toggle-inner menu__toggle-inner--open">
-							<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
-						</span>
-						<span class="menu__toggle-inner menu__toggle-inner--close">
-							<i class="fa fa-times"></i>
-						</span>
-					</div>
-				</nav>
+				</ul>
+				<div class="menu__toggle">
+					<span class="menu__toggle-inner menu__toggle-inner--open">
+						<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
+					</span>
+					<span class="menu__toggle-inner menu__toggle-inner--close">
+						<i class="fa fa-times"></i>
+					</span>
+				</div>
+			</nav>
 
 
 
 
 
 
-				
-				<!-- facts expander with toggles; content for each is in its section -->
-				<div class="facts">
-					<div class="facts__toggle">
+			
+			<!-- facts expander with toggles; content for each is in its section -->
+			<div class="facts">
+				<div class="facts__toggle">
 						<!-- <span class="facts__toggle-inner facts__toggle-inner--more">
 							<svg class="icon icon--dot"><use xlink:href="#icon-dot"></use></svg>
 							<span class="facts__toggle-text">See more facts</span>
@@ -339,7 +339,7 @@
 
 
 
-			
+				
 
 
 
@@ -356,7 +356,7 @@
 
 
 
-	<footer>
+			<footer>
 
 				<!--For links-->
 				<div class="row">
@@ -369,7 +369,8 @@
 							</div>
 							<div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
 								<h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Riyaz Panjwani : 8953567592</h5>
+								<h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
 								<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
 								<h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
 								<br>
@@ -426,7 +427,7 @@
 
 			
 		</main>
-	
+		
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/charming.min.js"></script>
 		<script src="js/anime.min.js"></script>
