--- a/subevents/razmatazz/index.html
+++ b/subevents/razmatazz/index.html
@@ -363,6 +363,7 @@
 					<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
 						<div class="row">
 							<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+								<img class="footer_logo" src="../../img/logo_footer.png">
 								<h2>&nbsp;&nbsp;Culrav</h2>
 								<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class="fa  fa-fw fa-facebook"></i></a></button>
 								<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
