--- a/schedule/index.html
+++ b/schedule/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
-  <title>Culrav 2018 | Schedule</title>
+  <title>Culrav'18 | Schedule</title>
   
   
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap.min.css">
