--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Expires" content="30">
 	<title>Culrav | MNNIT </title>
 	<meta name="description" content="The end of March will corroborate to be a week of euphoria and fresh ideation, a resplendent rostrum to hone ones flair and virtuosity and bask in the glory of triumph and merriment,
 	known as CULRAV 2018- the annual cultural extravaganza of Motilal Nehru National Institute of Technology Allahabad." />
@@ -27,11 +28,11 @@
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="./js/imagesloaded.pkgd.min.js"></script>
-	<script src="./js/main.js"></script>
-	<script src="./js/anime.min.js"></script>
+	crossorigin="anonymous" async></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" async></script>
+	<script src="./js/imagesloaded.pkgd.min.js" async></script>
+	<script src="./js/main.js" async></script>
+	<script src="./js/anime.min.js" async></script>
 	
 
 		<!--[if IE]>
