--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="culrav,rangsaazi" />
 	<meta name="author" content="MNNIT" />
 	<link rel="shortcut icon" href="favicon.ico">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"async></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -491,10 +491,10 @@
 
 		</main>
 	
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/charming.min.js"></script>
-		<script src="js/anime.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/imagesloaded.pkgd.min.js"async></script>
+		<script src="js/charming.min.js"async></script>
+		<script src="js/anime.min.js"async></script>
+		<script src="js/main.js"async></script>
 	</body>
 
 	<!-- Mirrored from tympanus.net/Development/OutdoorsTemplate/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 25 Feb 2018 14:39:06 GMT -->
