--- a/events/index.html
+++ b/events/index.html
@@ -24,10 +24,10 @@
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+	crossorigin="anonymous" async></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" async></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	<!--<script src="../../codrops/adpacks/analytics.js"></script>-->
+	<!--<script src="../../codrops/adpacks/analytics.js"async></script>-->
 <script type="text/javascript">
 	$(document).ready(function(){
 		$('#navbutton').click(function(e){
@@ -216,9 +216,9 @@
 		$(this).css('background-position', amountMovedX + 'px ' + amountMovedY + 'px');
 	});
 	</script>
-	<script src='js/anime.min.js'></script>
-	<script src='js/pieces.min.js'></script>
-	<script src='js/demo.js'></script>
+	<script src='js/anime.min.js' async></script>
+	<script src='js/pieces.min.js' async></script>
+	<script src='js/demo.js' async></script>
 </body>
 
 <!-- Mirrored from tympanus.net/Tutorials/PiecesSlider/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2018 11:03:44 GMT -->
