--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 
 		<!--[if IE]>
-			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"async></script>
 			<![endif]-->
 			<script>
 			document.documentElement.className = 'js';
