--- a/schedule/index.html
+++ b/schedule/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap-glyphicons.css">
   <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.0.min.js" async></script>
  
 </head>
 
