--- a/team/index.html
+++ b/team/index.html
@@ -23,12 +23,12 @@
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="./js/imagesloaded.pkgd.min.js"></script>
-	<script src="./js/main.js"></script>
-	<script src="./js/anime.min.js"></script>
-	<script src="../../codrops/adpacks/analytics.js"></script>
+	crossorigin="anonymous"async></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"async></script>
+	<script src="./js/imagesloaded.pkgd.min.js"async></script>
+	<script src="./js/main.js"async></script>
+	<script src="./js/anime.min.js"async></script>
+	<script src="../../codrops/adpacks/analytics.js"async></script>
 	<link rel="stylesheet" type="text/css" href="../css/footer.css" />
 	<style>
 		body{
