--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <script src="js/html5shiv.js"async></script>
+    <script src="js/html5shiv.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -246,11 +246,11 @@
             </div>
         </footer>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"async></script>
-        <script src="js/bootstrap.js"async></script>
-        <script src="js/bootstrap.min.js"async></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 
-        <script src="js/prefixfree.min.js"async></script>
+        <script src="js/prefixfree.min.js"></script>
     </body>
 
     <!-- Mirrored from culrav.in/sponsors/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Jul 2016 00:26:16 GMT -->
