--- a/subevents/anunaad/index.html
+++ b/subevents/anunaad/index.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	
 	<script
-	src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" async></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" async></script>
+	src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" ></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript" ></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -564,10 +564,10 @@
 
 
 
-		<script src="js/imagesloaded.pkgd.min.js" async></script>
-		<script src="js/charming.min.js" async></script>
-		<script src="js/anime.min.js" async></script>
-		<script src="js/main.js" async></script>
+		<script src="js/imagesloaded.pkgd.min.js" ></script>
+		<script src="js/charming.min.js" ></script>
+		<script src="js/anime.min.js" ></script>
+		<script src="js/main.js" ></script>
 	</body>
 
 	<!-- Mirrored from tympanus.net/Development/OutdoorsTemplate/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 25 Feb 2018 14:39:06 GMT -->
