--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/slider.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
+<link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="pater/pater.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
@@ -31,6 +31,7 @@
         height: 200px;
         width:300px;
     }
+
     </style>
 </head>
 
@@ -39,7 +40,7 @@
     <div class="header-nightsky">
         <nav class="navbar navbar-default" style="background:transparent">
             <div class="container">
-                <a class="navbar-brand" href="#">LOGO</a>
+                <a class="navbar-brand" href="#"></a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
@@ -189,6 +190,7 @@
             <div class=" col-xs-12 col-sm-6 col-md-6" id="logos_contact" align="center">
                 <div class="row">
                     <div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+                        <img class="footer_logo" src="../img/logo_footer.png">
                         <h2>&nbsp;&nbsp;Culrav</h2>
                         <button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
                         <!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
