--- a/team/index.html
+++ b/team/index.html
@@ -46,7 +46,7 @@
 	<div class="header-nightsky">
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container">
-				<a class="navbar-brand" href="#">LOGO</a>
+				<a class="navbar-brand" href="#"><img class="main_logo" src="img/logo.png"></a>
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="navbutton">
 						<span class="icon-bar"></span>
@@ -313,6 +313,7 @@
 			<div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
 				<div class="row">
 					<div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+						
 						<h2>&nbsp;&nbsp;Culrav</h2>
 						<button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
 						<!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
