--- a/schedule/index.html
+++ b/schedule/index.html
@@ -2,23 +2,73 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Culrav'18 | Schedule</title>
-  
   
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap-glyphicons.css">
+  
+  
+  <!-- <link rel="stylesheet" type="text/css" href="css/base.css" /> -->
+  <link rel="stylesheet" type="text/css" href="css/navbar.css" />
+  
   <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="favicon.ico">
-  <script type="text/javascript" src="js/jquery-1.11.0.min.js" ></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous" ></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./js/anime.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
   <link rel="stylesheet" type="text/css" href="../css/footer.css" />
 </head>
+<style type="text/css">
+  
 
+.main_logo{
+  width: 130px;
+  margin-top:-2vw;
+  margin-left: -4vw;
+}
+
+footer{
+  width: 101%;
+}
+
+.row{
+  margin-right: 0px;
+}
+
+</style>
 <body>
+    <div class="header-nightsky">
+          <nav class="navbar navbar-default navbar-static-top">
+            <div class="container">
+              <a class="navbar-brand" href="#"><img class="main_logo" src="img/logo.png"></a>
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="navbutton">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+              <div class="collapse navbar-collapse event-nav" id="myNavbar" >
+                <ul class="nav navbar-nav navbar-right ">
+                  <li><a href="../index.html">HOME</a></li>
+                  <li><a href="../events/index.html">EVENTS</a></li>
+                  <li><a href="../schedule/index.html">SCHEDULE</a></li>
+                  <li><a href="../sponsors/index.html">SPONSORS</a></li>
+                  <li><a href="../team/index.html">TEAM</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
   <div class="container" >
     <header class="page-header">
       <h1 class="mainhead" style="color: #DA2C43;"><strong>CULRAV'18 SCHEDULE</strong></h1>
@@ -464,49 +514,49 @@
 
   <footer>
 
-    <!--For links-->
-    <div class="row">
-      <div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+        <!--For links-->
         <div class="row">
-          <div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
-            <img class="footer_logo" src="../img/logo_footer.png">
-            <h2>&nbsp;&nbsp;Culrav</h2>
-            <button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
-            <!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
+          <div class=" col-xs-12 col-sm-12 col-md-6" id="logos_contact" align="center">
+            <div class="row">
+              <div class="col-xs-12 col-sm-5 col-md-5  logo_contact_div" id="logo_div">
+                <img class="footer_logo" src="../img/logo_footer.png">
+                <h2>&nbsp;&nbsp;Culrav</h2>
+                <button class="logo"><a href="https://www.facebook.com/mnnit.culrav/" target="_blank"><i class=" fa fa-fw fa-facebook"></i></a></button>
+                <!-- <button class="logo" style="margin-left: 30px"><a><i class="fa  fa-fw fa-twitter"></i></a></button> -->
+              </div>
+              <div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
+                <h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
+                <h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
+                <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
+                <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
+                <h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
+                <br>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-7 col-md-7 logo_contact_div" id="contacts_div" align="center">
-            <h5><i class="fa fa-map-marker fa-fw" style="font-size: 30px"></i>  MNNIT Allahabad, India </h5>
-            <h5><i class="fa fa-phone fa-fw" style="font-size: 30px"></i>Sagar Nagaich : 8175010260</h5>
-            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Riyaz Panjwani : 8953567592</h5>
-            <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shubham Singh : 9198230226</h5>
-            <h5><i class="fa fa-envelope fa-fw" style="font-size: 30px"></i> team.culrav@culrav.in </h5>
-            <br>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-6" id="links">
-        <div class="row">
-          <div class="col-xs-12 col-sm-12" align="center" id="title">
-            <strong>Other</strong>
-          </div>
-        </div>
-        <div class="row last_row">
-          <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
-            <ul style="list-style: none;">
-              <li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
-              <li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
-              <li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
-              <li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
-            </ul>
-          </div>
-          <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
-            <ul style="list-style: none;">
-              <!--<li><strong>Navigate</strong></li>-->
-              <!--<li><a class="footer_links">Home</a></li>-->
-              <!--<li><a class="footer_links">About</a></li>-->
-              <!--<li><a class="footer_links">FAQs</a></li>-->
-              <!--<li><a class="footer_links">Register</a></li>-->
-              <li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
+          <div class="col-xs-12 col-sm-12 col-md-6" id="links">
+            <div class="row">
+              <div class="col-xs-12 col-sm-12" align="center" id="title">
+                <strong>Other</strong>
+              </div>
+            </div>
+            <div class="row last_row">
+              <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="events_div" align="center">
+                <ul style="list-style: none;">
+                  <li><a href="../../index.html" target="_blank"class="footer_links">Home</a></li>
+                  <li><a href="../../events/index.html" target="_blank" class="footer_links">Events</a></li>
+                  <li><a href="../../sponsors/index.html" target="_blank" class="footer_links">Sponsors</a></li>
+                  <li><a href="../../schedule/index.html" target="_blank" class="footer_links">Schedule</a></li>
+                </ul>
+              </div>
+              <div class=" col-xs-12 col-sm-12 col-md-6 logo_contact_div" id="navigate_div" align="center">
+                <ul style="list-style: none;">
+                  <!--<li><strong>Navigate</strong></li>-->
+                  <!--<li><a class="footer_links">Home</a></li>-->
+                  <!--<li><a class="footer_links">About</a></li>-->
+                  <!--<li><a class="footer_links">FAQs</a></li>-->
+                  <!--<li><a class="footer_links">Register</a></li>-->
+                  <li><a href="https://www.mnnit.ac.in" target="_blank" class="footer_links">MNNIT Allahabad</a></li>
                   <!-- <li><a class="footer_links">Razmatazz</a></li>
                   <li><a class="footer_links">Dark Room</a></li>
                   <li><a class="footer_links">Anunaad</a></li> -->
