--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -31,7 +31,12 @@
         height: 200px;
         width:300px;
     }
-
+.main_logo{
+  width: 130px;
+  height: 100px;
+  margin-top:-2vw;
+  margin-left: -4vw;
+}
     </style>
 </head>
 
@@ -40,7 +45,7 @@
     <div class="header-nightsky">
         <nav class="navbar navbar-default" style="background:transparent">
             <div class="container">
-                <a class="navbar-brand" href="#"></a>
+               <a class="navbar-brand" href="#"><img class="main_logo" src="img/logo.png"></a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
