--- a/subevents/rangsaazi/index.html
+++ b/subevents/rangsaazi/index.html
@@ -95,22 +95,24 @@
 					<div class="section__content">
 						<h1 class="section__title">Face&nbsp;&nbsp;Painting</h1>
 						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-						<p class="section__description"><span class="section__slogan"><!-- i>"In order to be irreplaceable, you must always be Different."</i> --></span><span class="section__description-inner"></span></p>
-					</div>
-					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/facepainting.jpeg);background-size:contain;background-repeat:no-repeat"></div>
-					</div>
-					<div class="section__more">
-						<div class="section__more-inner section__more-inner--bg1">
-							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
-								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
-							</a>
+						<p class="section__description"><span class="section__slogan"><!-- i>"In order to be irreplaceable, you must always be Different."</i> --></span><span class="section__description-inner">What's better than turning your friends' faces into canvas for your next art! The
+							sheer amount of participation is spell bounding in this very event. Not just the face, the hair, the
+							neck and the hands, all available to explore your creativity</span></p>
 						</div>
-					</div>
-					<div class="section__expander"></div>
-					<ul class="section__facts">
+						<div class="section__img">
+							<div class="section__img-inner" style="background-image: url(img/facepainting.jpeg);background-size:contain;background-repeat:no-repeat"></div>
+						</div>
+						<div class="section__more">
+							<div class="section__more-inner section__more-inner--bg1">
+								<span class="section__more-text">Want to know more?</span>
+								<a class="section__more-link" href="./rangsaazi.pdf">
+									<span class="section__more-linktext">Click Here</span>
+									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
+								</a>
+							</div>
+						</div>
+						<div class="section__expander"></div>
+						<ul class="section__facts">
 						<!-- <li class="section__facts-item">
 							<h4 class="section__facts-title">Co-ordinators</h4>
 							
@@ -156,10 +158,10 @@
 
 				<section class="section">
 					<div class="section__content">
-						<h1 class="section__title">3&nbsp;&nbsp;Scoops</h1>
+						<h1 class="section__title">Blind&nbsp;&nbsp;Art</h1>
 						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
 						<p class="section__description"><!-- <span class="section__slogan"><i>"Fashion is not necessarily about Labels. It's not about Brands.
-							It's about something else that comes from within you. "</i></span><span class="section__description-inner">Dress to thrill not to win. You're the owner of the runway. Ooze Class and creativity with every step. Withness spellbounding allures, breathtaking models and beautiful designs.</span> --></p>
+							It's about something else that comes from within you. "</i></span> --><span class="section__description-inner">Blindfolded, you need to paint your imagination right onto reality. Mess with colors with the vision of your mind's eye</span></p>
 						</div>
 						<div class="section__img">
 							<div class="section__img-inner" style="background-image: url(img/rampwalk.jpg);background-size:contain;background-repeat:no-repeat"></div>
@@ -167,8 +169,8 @@
 						<div class="section__more">
 							<div class="section__more-inner section__more-inner--bg1">
 								<span class="section__more-text">Want to know more?</span>
-								<a class="section__more-link">
-									<span class="section__more-linktext">Reach us at<br>team.culrav@culrav.in</span>
+								<a class="section__more-link" href="./rangsaazi.pdf">
+									<span class="section__more-linktext">Click Here</span>
 									<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 								</a>
 							</div>
@@ -224,7 +226,7 @@
 					<div class="section__content">
 						<h1 class="section__title">Doodling</h1>
 						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner"> </span></p>
+						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner">A fun event challenging the participants to create a masterpiece out of those doodle creatures. </span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/doodle.jpeg);background-size:contain;background-repeat:no-repeat"></div>
@@ -232,8 +234,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a class="section__more-link" href="./rangsaazi.pdf">
+								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -247,7 +249,7 @@
 						
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Asad</h3>
-							<span class="section__facts-detail"></span>
+							<span class="section__facts-detail">9598523148</span>
 						</li>
 						<li class="section__facts-item">
 							<h3 class="section__facts-title">Sushma Sharma</h3>
@@ -278,18 +280,18 @@
 
 				<section class="section">
 					<div class="section__content">
-						<h1 class="section__title">Site&nbsp;&nbsp;Sketching</h1>
+						<h1 class="section__title">Paper&nbsp;&nbsp;Dress</h1>
 						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner"> </span></p>
+						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner">The new kid on the block. Create your own apparel using mere papers, scissors, ribbons.</span></p>
 					</div>
 					<div class="section__img">
-						<div class="section__img-inner" style="background-image: url(img/site.jpg);background-size:contain;background-repeat:no-repeat"></div>
+						<div class="section__img-inner" style="background-image: url(img/paperdress.jpg);background-size:contain;background-repeat:no-repeat"></div>
 					</div>
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a class="section__more-link" href="./rangsaazi.pdf">
+								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -338,7 +340,8 @@
 					<div class="section__content">
 						<h1 class="section__title">Rangoli</h1>
 						<!-- <h3 class="section__slogan"><i>"Let the music speak"</i></h3> -->
-						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner"> </span></p>
+						<p class="section__description"><!-- <span class="section__slogan"><i>"Battle Of the Bands"</i></span> --><span class="section__description-inner">A modern day render of the traditional Indian art - Rangoli. A 3 hour long theme-based 
+rangoli competition covering the latest trending or social topics</span></p>
 					</div>
 					<div class="section__img">
 						<div class="section__img-inner" style="background-image: url(img/rangoli.jpeg);background-size:contain;background-repeat:no-repeat"></div>
@@ -346,8 +349,8 @@
 					<div class="section__more">
 						<div class="section__more-inner section__more-inner--bg1">
 							<span class="section__more-text">Want to know more?</span>
-							<a class="section__more-link">
-								<span class="section__more-linktext">Reach us at <br>team.culrav@culrav.in</span>
+							<a class="section__more-link" href="./rangsaazi.pdf">
+								<span class="section__more-linktext">Click Here</span>
 								<svg class="icon icon--arrowlong"><use xlink:href="#icon-arrowlong"></use></svg>
 							</a>
 						</div>
@@ -416,8 +419,8 @@
 			</div><!--/ sections -->
 
 
-	
-	<footer>
+
+			<footer>
 
 				<!--For links-->
 				<div class="row">
@@ -490,7 +493,7 @@
 
 
 		</main>
-	
+
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/charming.min.js"></script>
 		<script src="js/anime.min.js"></script>
